page leria mobile et correction leria ordi

--- a/m/index.html
+++ b/m/index.html
@@ -6,14 +6,16 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
+    <meta name="description"
+        content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
     <meta http-equiv="refresh" content="3600">
 
     <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style-index.css">
     <link rel="stylesheet" href="css/nav.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Inter'>
 
     <script src="data/js/script-index.js"></script>
     <script src="../data/js/device-redirect-mobile.js"></script>
@@ -22,50 +24,57 @@
         <img src="data/imgs/index/return-arrow.svg" class="return-arrow" alt="retour en haut de la page">
     </button>
 </head>
+
 <body>
     <div class="fjaune" id="start">
         <nav>
             <div class="navbar">
-              <div class="container nav-container">
-                  <input class="checkbox" type="checkbox" name="" id="" />
-                <div class="logo">
-                  <img src="../data/imgs/all/MTI.png" alt="Logo">
+                <div class="container nav-container">
+                    <input class="checkbox" type="checkbox" name="" id="" />
+                    <div class="logo">
+                        <img src="../data/imgs/all/MTI.png" alt="Logo">
+                    </div>
+                    <div class="hamburger-lines">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
+                    </div>
+                    <div class="menu-items">
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="index.html#projets">Projets</a></li>
+                        <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button
+                                    class="nav_btn-cv">Mon CV</button></a></li>
+                        <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img
+                                        src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin"
+                                        class="nav_logo-lkdn"></button></a></li>
+                        <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button
+                                    class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png"
+                                        alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
+                    </div>
                 </div>
-                  <div class="hamburger-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                  </div>  
-                <div class="menu-items">
-                  <li><a href="index.html">Accueil</a></li>
-                  <li><a href="index.html#projets">Projets</a></li>
-                  <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                  <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">Mon CV</button></a></li>
-                  <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn"></button></a></li>
-                  <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
-                </div>
-              </div>
             </div>
-          </nav>
+        </nav>
 
-            <div class="header">
-                <div class="box-img-header">
-                    <img src="../data/imgs/index/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
+        <div class="header">
+            <div class="box-img-header">
+                <img src="../data/imgs/index/img-manon-acc.png" alt="Image de Manon Thillay-Isnard"
+                    class="img-manon-acc">
+            </div>
+            <div class="int-header">
+                <h2 class="hello">Hello,</h2>
+                <div class="vertical-p-container">
+                    <p class="vertical-p">je suis</p>
+                    <h1 class="horizontal-h1">Manon</h1>
                 </div>
-                <div class="int-header">
-                    <h2 class="hello">Hello,</h2>
-                    <div class="vertical-p-container">
-                        <p class="vertical-p">je suis</p>
-                        <h1 class="horizontal-h1">Manon</h1>
-                    </div>
-                    <div class="button-container">
-                        <button>UI/UX Design</button>
-                        <button class="btn-2-acc">Web Design</button>
-                        <button class="btn-2-acc">Gestion de projet</button>
-                    </div>
+                <div class="button-container">
+                    <button>UI/UX Design</button>
+                    <button class="btn-2-acc">Web Design</button>
+                    <button class="btn-2-acc">Gestion de projet</button>
                 </div>
             </div>
+        </div>
     </div>
     <div class="f-project">
         <div class="box-h2projet">
@@ -80,7 +89,8 @@
         <div class="container-projects-cards">
             <div class="box-card">
                 <a href="leria.html">
-                    <img src="../data/imgs/index/leria.jpg" alt="Image d'illustration du projet Leria." class="project-img">
+                    <img src="../data/imgs/index/leria.jpg" alt="Image d'illustration du projet Leria."
+                        class="project-img">
                 </a>
                 <h3 class="project-title">Leria</h3>
                 <p class="project-subtitle">Création Web</p>
@@ -99,7 +109,8 @@
             </div>
             <div class="box-card">
                 <a href="sylvassur.html">
-                    <img src="../data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur." class="project-img">
+                    <img src="../data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur."
+                        class="project-img">
                 </a>
                 <h3 class="project-title">Sylvassur</h3>
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
@@ -118,7 +129,8 @@
             </div>
             <div class="box-card">
                 <a href="autopanneassur.html">
-                    <img src="../data/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
+                    <img src="../data/imgs/index/autopanneassur.jpg"
+                        alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
                 </a>
                 <h3 class="project-title">AutoPanneAssur</h3>
                 <p class="project-subtitle">Création Web</p>
@@ -137,7 +149,8 @@
             </div>
             <div class="box-card">
                 <a href="l'acoste.html">
-                    <img src="../data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE." class="project-img">
+                    <img src="../data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE."
+                        class="project-img">
                 </a>
                 <h3 class="project-title">L’ACOSTE</h3>
                 <p class="project-subtitle">Refonte de l’identité & création d’app</p>
@@ -147,7 +160,8 @@
                             &Agrave; venir
                         </button>
                     </a>
-                    <a href="https://www.behance.net/gallery/167982615/LACOSTE-Refonte-didentit/modules/949682175" target="_blank">
+                    <a href="https://www.behance.net/gallery/167982615/LACOSTE-Refonte-didentit/modules/949682175"
+                        target="_blank">
                         <button class="projects-buttons-right">
                             Behance
                         </button>
@@ -156,7 +170,8 @@
             </div>
             <div class="box-card">
                 <a href="gfa.html">
-                    <img src="../data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding." class="project-img">
+                    <img src="../data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding."
+                        class="project-img">
                 </a>
                 <h3 class="project-title">GFA Funding</h3>
                 <p class="project-subtitle">Création d’identité</p>
@@ -166,7 +181,8 @@
                             &Agrave; venir
                         </button>
                     </a>
-                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
+                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389"
+                        target="_blank">
                         <button class="projects-buttons-right">
                             Behance
                         </button>
@@ -175,7 +191,8 @@
             </div>
             <div class="box-card">
                 <a href="bouygues-telecom.html">
-                    <img src="../data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
+                    <img src="../data/imgs/index/bouygues-telecom.jpg"
+                        alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
                 </a>
                 <h3 class="project-title">Bouygues Telecom</h3>
                 <p class="project-subtitle">Proposition de solution</p>
@@ -185,7 +202,8 @@
                             &Agrave; venir
                         </button>
                     </a>
-                    <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031" target="_blank">
+                    <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031"
+                        target="_blank">
                         <button class="projects-buttons-right">
                             Behance
                         </button>
@@ -195,12 +213,16 @@
         </div>
     </div>
     <footer>
-        <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+        <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
+                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png" class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="../data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+        <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png"
+                class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img
+                src="../data/imgs/all/logo-linkedin.png" class="img-footer"></a>
     </footer>
 </body>
+
 </html>
