--- a/leria.html
+++ b/leria.html
@@ -65,8 +65,8 @@
             </tr>
             <tr>
                 <td>
-                    J&#8217;ai d&#251; accompagn&#233; la cr&#233;ation d&#8217;une filiale et les ai accompagn&#233;
-                    lors de la cr&#233;ation de leur site web en cherchant ensemble comment pr&#233;senter le tout.
+                    J&#8217;ai d&#251; accompagn&#233; la cr&#233;ation d&#8217;une filiale et les ai soutenus
+                lors de la conception de leur site web en collaborant pour d&eacute; la meilleure façon de pr&eacute; l'ensemble.
                 </td>
                 <td>
                     J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
