--- a/m/leria.html
+++ b/m/leria.html
@@ -13,19 +13,39 @@
     <link rel="stylesheet" href="css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-    <script src="../data/js/device-redirect-computer.js"></script>
+    <script src="../data/js/device-redirect-mobile.js"></script>
 </head>
 
 <body>
     <div class="header-background">
         <nav>
-            <a href="../index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
-            <a href="../index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
-            <a href="../qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <a href="../contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-            <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
+            <div class="navbar">
+                <div class="container nav-container">
+                    <input class="checkbox" type="checkbox" name="" id="" />
+                    <div class="logo">
+                        <img src="../data/imgs/all/MTI.png" alt="Logo">
+                    </div>
+                    <div class="hamburger-lines">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
+                    </div>
+                    <div class="menu-items">
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="index.html#projets">Projets</a></li>
+                        <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button
+                                    class="nav_btn-cv">Mon CV</button></a></li>
+                        <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img
+                                        src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin"
+                                        class="nav_logo-lkdn"></button></a></li>
+                        <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button
+                                    class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png"
+                                        alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
+                    </div>
+                </div>
+            </div>
         </nav>
 
         <div class="header">
@@ -48,48 +68,43 @@
                 </button>
             </div>
         </div>
-        <table class="t1">
-            <tr>
-                <th class="title-table1">
-                    r&#233;sum&#233;/brief
-
-                </th>
-                <th class="title-table2">
-                    &eacute;quipe
-
-                </th>
-                <th class="title-table3">
-                    logiciels
-
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    J&#8217;ai d&#251; accompagn&#233; la cr&#233;ation d&#8217;une filiale et les ai accompagn&#233;
-                    lors de la cr&#233;ation de leur site web en cherchant ensemble comment pr&#233;senter le tout.
-                </td>
-                <td>
-                    J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
-                </td>
-                <td>
-                    Wordpress
-                    <br>
-                    Evolvetree
-                    <br>
-                    Miro
-                    <br>
-                    Word
-                </td>
-            </tr>
-        </table>
+        <div class="box_p-bot-header">
+            <h3>
+                r&#233;sum&#233;/brief
+            </h3>
+            <p class="p-bot-header">
+                J&#8217;ai d&#251; accompagn&#233; la cr&#233;ation d&#8217;une filiale et les ai soutenus
+                lors de la conception de leur site web en collaborant pour d&eacute; la meilleure façon de pr&eacute; l'ensemble.
+            </p>
+            <h3>
+                &eacute;quipe
+            </h3>
+            <p class="p-bot-header">
+                J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
+            </p>
+            <h3>
+                logiciels
+            </h3>
+            <p class="p-bot-header">
+            Wordpress
+            <br>
+            Evolvetree
+            <br>
+            Miro
+            <br>
+            Word
+            </p>
+        </div>
     </div>
     <img src="../data/imgs/leria/LERIA-eolienne.jpg" alt="Illustration d'une &eacute;olienne" class="img-eolienne">
     <div class="background-white">
         <div class="box-h2">
-            <div class="box-le2">
-                <p class="txt-le2">le</p>
+            <div class="box-le">
+                <p class="txt-le">
+                    le
+                </p>
             </div>
-            <h2 class="titre_rose2">
+            <h2 class="titre_rose">
                 projet
             </h2>
         </div>
@@ -241,9 +256,9 @@
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png"
+        <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png"
                 class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png"
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="../data/imgs/all/logo-linkedin.png"
                 class="img-footer"></a>
     </footer>
 </body>
