faute sur leria

--- a/leria.html
+++ b/leria.html
@@ -65,7 +65,7 @@
             </tr>
             <tr>
                 <td>
-                    J&#8217;ai d&#251; accompagn&#233; la cr&#233;ation d&#8217;une filiale et les ai soutenus
+                    J&#8217;ai d&#251; accompagner la cr&#233;ation d&#8217;une filiale et les ai soutenus
                 lors de la conception de leur site web en collaborant pour d&eacute; la meilleure façon de pr&eacute; l'ensemble.
                 </td>
                 <td>
