--- a/m/leria.html
+++ b/m/leria.html
@@ -73,7 +73,7 @@
                 r&#233;sum&#233;/brief
             </h3>
             <p class="p-bot-header">
-                J&#8217;ai d&#251; accompagn&#233; la cr&#233;ation d&#8217;une filiale et les ai soutenus
+                J&#8217;ai d&#251; accompagner la cr&#233;ation d&#8217;une filiale et les ai soutenus
                 lors de la conception de leur site web en collaborant pour d&eacute; la meilleure façon de pr&eacute; l'ensemble.
             </p>
             <h3>
