page qui suis je mobile

--- a/m/qui_suis-je.html
+++ b/m/qui_suis-je.html
@@ -1,76 +1,80 @@
 <!DOCTYPE html>
 <html lang="frfr">
-    <head>
-        <title>mQui suis-je ? | mthillayisnard.fr</title>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <title>Qui suis-je ? | mthillayisnard.fr</title>
 
-        <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
-        <link rel="stylesheet" href="css/style-qui_suis-je.css">
-        <link rel="stylesheet" href="css/nav.css">
-        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-        <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="../data/js/device-redirect-mobile.js"></script>
-    </head>
-    <body>
-        <div class="fjaune">
-            <nav>
-                <div class="navbar">
-                  <div class="container nav-container">
-                      <input class="checkbox" type="checkbox" name="" id="" />
-                    <div class="logo">
-                      <img src="../data/imgs/all/MTI.png" alt="Logo">
-                    </div>
-                      <div class="hamburger-lines">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
-                      </div>  
-                    <div class="menu-items">
-                      <li><a href="index.html">Accueil</a></li>
-                      <li><a href="index.html#projets">Projets</a></li>
-                      <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-                      <li><a href="contact.html">Contact</a></li>
-                      <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">Mon CV</button></a></li>
-                      <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn"></button></a></li>
-                      <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
-                    </div>
-                  </div>
-                </div>
-              </nav>
+  <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/style-qui_suis-je.css">
+  <link rel="stylesheet" href="css/nav.css">
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
-            <div class="container-header">
-                <div class="header">
-                    <div class="header-column-left">
-                        <img src="../data/imgs/qui-suis-je/manon-enfant.png" alt="Image de Manon Thillay-Isnard enfant" class="manon-enfant">
-                    </div>
-                    <div class="header-column-right">
-                        <h2 class="hello">Hello,</h2>
-                        <div class="vertical-p-container">
-                            <p class="vertical-p">je suis</p>
-                            <h1 class="horizontal-h1">Manon</h1>
-                        </div>
-                        <div class="button-container">
-                            <button>web design</button>
-                            <button class="btn-2-acc">UI design</button>
-                        </div>
-                        <p class="bio">
-                            Passionnée de création et avec un esprit rempli d’imagination depuis mon plus jeune âge, j’ai décidé de me tourner vers un métier passion. C’est pourquoi aujourd’hui je me suis lancée dans la conception produit mais aussi le web design et la créa pure et dure.
-                            <br>
-                            <br>
-                            Avec ce site, je vous permet de rentrer dans ma tête et découvrir certains de mes projets à travers mon regard et ma méthodologie. 
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <footer>
-                <p class="p-footer">@mthillayisnard <script>document.write(new Date().getFullYear())</script></p>
-              
-                <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance-noir.png" class="img-footer"></a>
-                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin-noir.png" class="img-footer"></a>
-            </footer>
+  <script src="../data/js/device-redirect-mobile.js"></script>
+</head>
+
+<body>
+  <div class="fjaune">
+    <nav>
+      <div class="navbar">
+        <div class="container nav-container">
+          <input class="checkbox" type="checkbox" name="" id="" />
+          <div class="logo">
+            <img src="../data/imgs/all/MTI.png" alt="Logo">
+          </div>
+          <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+          </div>
+          <div class="menu-items">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="index.html#projets">Projets</a></li>
+            <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">Mon
+                  CV</button></a></li>
+            <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img
+                    src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn"></button></a>
+            </li>
+            <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="nav_btn-bhnc"><img
+                    src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc"></button></a>
+            </li>
+          </div>
         </div>
-    </body>
+      </div>
+    </nav>
+
+    <div class="container-header">
+      <div class="header">
+        <div class="header-title">
+          <h2 class="hello">Hello,</h2>
+          <div class="vertical-p-container">
+            <p class="vertical-p">je suis</p>
+            <h1 class="horizontal-h1">Manon</h1>
+          </div>
+        </div>
+        <div class="button-container">
+          <button>UX/UI design</button>
+          <button>Web design</button>
+          <button>UX Research</button>
+        </div>
+      </div>
+      <p class="bio">
+        Passionnée de création et avec un esprit rempli d’imagination depuis mon plus jeune âge, j’ai décidé de me
+        tourner vers un métier passion. C’est pourquoi aujourd’hui je me suis lancée dans la conception produit mais
+        aussi le web design et la créa pure et dure.
+        <br>
+        <br>
+        Avec ce site, je vous permet de rentrer dans ma tête et découvrir certains de mes projets à travers mon
+        regard et ma méthodologie.
+      </p>
+      <img src="../data/imgs/qui-suis-je/manon-enfant.png" alt="Photographie de Manon enfant." class="manon-enfant">
+    </div>
+  </div>
+</body>
+
 </html>
