boutons du header sur qui suis je fixe

--- a/qui_suis-je.html
+++ b/qui_suis-je.html
@@ -38,8 +38,9 @@
                             <h1 class="horizontal-h1">Manon</h1>
                         </div>
                         <div class="button-container">
-                            <button>web design</button>
-                            <button class="btn-2-acc">UI design</button>
+                            <button>UX/UI design</button>
+                            <button>Web design</button>
+                            <button>UX Reasearch</button>
                         </div>
                         <p class="bio">
                             Passionnée de création et avec un esprit rempli d’imagination depuis mon plus jeune âge, j’ai décidé de me tourner vers un métier passion. C’est pourquoi aujourd’hui je me suis lancée dans la conception produit mais aussi le web design et la créa pure et dure.
