chemin img footer contact mobile

--- a/m/contact.html
+++ b/m/contact.html
@@ -46,7 +46,7 @@
             <p class="p-footer">@mthillayisnard
                 <script>document.write(new Date().getFullYear())</script>
             </p>
-            <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance-noir.png"
+            <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance-noir.png"
                     class="img-footer"></a>
             <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173">
                 <img src="../data/imgs/all/logo-linkedin-noir.png" class="img-footer">
