--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="container-btn-projects-cards">
                     <a href="l'acoste.html">
                         <button class="projects-buttons-left">
-                            D&aacute;couvrir le projet
+                            D&eacute;couvrir le projet
                         </button>
                     </a>
                     <a href="https://www.behance.net/gallery/167982615/LACOSTE-Refonte-didentit/modules/949682175" target="_blank">
