code html pour les caractères spéciaux

--- a/l'acoste.html
+++ b/l'acoste.html
@@ -2,7 +2,7 @@
 <html lang="frfr">
 
 <head>
-    <title>L'ACOSTE | mthillayisnard.fr</title>
+    <title>L&apos;ACOSTE | mthillayisnard.fr</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,7 @@
             </div>
             <div class="box-header-bot">
                 <h1 class="header-h1">
-                    L'ACOSTE
+                    L&apos;ACOSTE
                 </h1>
             </div>
         </div>
@@ -67,7 +67,7 @@
                     &aacute;l&aacute;ments cl&aacute;s de son identit&aacute;.
                 </td>
                 <td>
-                    Nous étions en équipe de deux
+                    Nous &eacute;tions en &eacute;quipe de deux
                 </td>
                 <td>
                     Illustrator
@@ -81,7 +81,7 @@
             </tr>
         </table>
     </div>
-    <img src="data/imgs/L'ACOSTE/L'ACOSTE-baniere-1.jpg" alt="Banni&egrave;re de L'ACOSTE" class="banniere">
+    <img src="data/imgs/L'ACOSTE/L'ACOSTE-baniere-1.jpg" alt="Bannière de L'ACOSTE" class="banniere">
     <div class="background-white">
         <div class="box-h2">
             <div class="box-le">
@@ -92,9 +92,9 @@
             </h2>
         </div>
         <div class="text-corp">
-            Ce projet de cours d'une semaine a été tr&egrave;s amusant et m'a permis de développer mes compétences sur
-            Illustrator, Adobe XD et Photoshop. Les designs que vous allez voir ont été réalisés par moi-même, et nous
-            avons travaillé à deux sur le prototype de l'application.
+            Ce projet de cours d&apos;une semaine a &eacute;t&eacute; tr&egrave;s amusant et m&apos;a permis de d&eacute;velopper mes comp&eacute;tences sur
+            Illustrator, Adobe XD et Photoshop. Les designs que vous allez voir ont &eacute;t&eacute; r&eacute;alis&eacute;s par moi-m&ecirc;me, et nous
+            avons travaill&eacute; à deux sur le prototype de l&apos;application.
         </div>
 
         <div class="box-h2">
@@ -116,7 +116,7 @@
         <div class="embleme">
             <img src="data/imgs/L'ACOSTE/embleme-iconique.jpg"
                 alt="Illustration de l'embl&egrave;me iconique de l'acoste" class="embleme-img">
-            <p><b>L'embl&egrave;me iconique</b></p>
+            <p><b>L&apos;embl&egrave;me iconique</b></p>
         </div>
     </div>
     <img class="banniere" src="data/imgs/L'ACOSTE/apercu-pages.jpg" alt="Aperçu des pages de l'application.">
@@ -134,7 +134,7 @@
         </div>
 
         <p class="text-corp">
-            Pour accompagner cette refonte d’identité nous avons créer une application de rencontre. Nous avons maquetté
+            Pour accompagner cette refonte d’identit&eacute; nous avons cr&eacute;er une application de rencontre. Nous avons maquett&eacute;
             l’inscription ainsi que la page profil et match.
         </p>
 
@@ -145,7 +145,7 @@
                 </p>
             </div>
             <h2 class="titre_rose">
-                différents crocos
+                diff&eacute;rents crocos
             </h2>
         </div>
         <img src="data/imgs/L'ACOSTE/crocos.jpg"
@@ -153,22 +153,22 @@
             class="banniere">
         <p class="text-corp">
             <b class="color-rose">Le croco rose aka manuel</b>
-            Découvrez les sorties manuelles autour de chez vous et proposez à votre date une sortie simple ou plus
-            insolite et découvrez votre fibre artistique.
+            D&eacute;couvrez les sorties manuelles autour de chez vous et proposez à votre date une sortie simple ou plus
+            insolite et d&eacute;couvrez votre fibre artistique.
             <br>
             <br>
             <b class="color-jaune">Le croco jaune aka culturel</b>
-            Découvrez les sorties culturelles autour de chez vous et proposez à votre date une sortie simple ou plus
+            D&eacute;couvrez les sorties culturelles autour de chez vous et proposez à votre date une sortie simple ou plus
             insolite dans les lieux historiques autour de chez vous.
             <br>
             <br>
             <b class="color-rouge">Le croco rouge aka festif</b>
-            Découvrez les sorties festives autour de chez vous et proposer à votre date une sortie simple ou plus
-            insolite dans les lieux animés autour de chez vous.
+            D&eacute;couvrez les sorties festives autour de chez vous et proposer à votre date une sortie simple ou plus
+            insolite dans les lieux anim&eacute;s autour de chez vous.
             <br>
             <br>
             <b class="color-vert">Le croco vert aka verdure</b>
-            Découvrez les sorties vertes autour de chez vous et proposez à votre date une sortie simple ou plus insolite
+            D&eacute;couvrez les sorties vertes autour de chez vous et proposez à votre date une sortie simple ou plus insolite
             dans les lieux verdoyants autour de chez vous.
         </p>
 
@@ -197,8 +197,8 @@
         <p class="text-corp">
             <b>L’Onboarding</b>
             <br>
-            Une fois l’application téléchargée, l’utilisateur doit swipper sur 4 unboardings qui expliquent le concept
-            et la suite à venir, c'est-à-dire l’inscription pour trouver son match.
+            Une fois l’application t&eacute;l&eacute;charg&eacute;e, l’utilisateur doit swipper sur 4 unboardings qui expliquent le concept
+            et la suite à venir, c&apos;est-à-dire l’inscription pour trouver son match.
             <br>
         </p>
         <div class="box_img-flex4">
@@ -211,7 +211,7 @@
         <p class="text-corp">
             <b>L’inscription</b>
             <br>
-            4 fenêtres demanderont à l’utilisateur les informations nécessaires pour le connaître et connaître ses
+            4 fen&ecirc;tres demanderont à l’utilisateur les informations n&eacute;cessaires pour le conna&icirc;tre et conna&icirc;tre ses
             goûts.
             <br>
         </p>
@@ -236,7 +236,7 @@
         <p class="text-corp">
             <b>Le choix des crocos</b>
             <br>
-            Arrive le choix décisif des crocos, lesquels seront sélectionnés.
+            Arrive le choix d&eacute;cisif des crocos, lesquels seront s&eacute;lectionn&eacute;s.
             <br>
         </p>
         <div class="box_img-flex2">
@@ -247,7 +247,7 @@
         <p class="text-corp">
             <b>Les sorties crocos</b>
             <br>
-            Ici, on passe aux choses sérieuses. Vous pouvez découvrir les différents lieux de sorties et filtrer en
+            Ici, on passe aux choses s&eacute;rieuses. Vous pouvez d&eacute;couvrir les diff&eacute;rents lieux de sorties et filtrer en
             fonction de son choix de croco. Vous pouvez aussi voir les lieux dit «safes», avec qui nous sommes en
             partenariat.
             <br>
@@ -255,7 +255,7 @@
         <div class="two-columns">
             <div class="column">
                 <p class="text-corp">
-                    <b>Sélectionner</b>
+                    <b>S&eacute;lectionner</b>
                 </p>
                 <div>
                     <img src="data/imgs/L'ACOSTE/selectionner1.jpg" alt="Image de la selection 1." class="img-2columns">
@@ -264,7 +264,7 @@
             </div>
             <div class="column">
                 <p class="text-corp">
-                    <b>En détails</b>
+                    <b>En d&eacute;tails</b>
                 </p>
                 <div>
                     <img src="data/imgs/L'ACOSTE/en-details1.jpg" alt="Image de en details 1." class="img-2columns">
@@ -274,10 +274,10 @@
         </div>
 
         <p class="text-corp">
-            <b>L'interface swipe</b>
+            <b>L&apos;interface swipe</b>
             <br>
-            L’interface se veut simple et efficace : l’utilisateur connaît déjà son fonctionnement avant même d’avoir
-            utilisé l’application.
+            L’interface se veut simple et efficace : l’utilisateur conna&icirc;t d&eacute;jà son fonctionnement avant m&ecirc;me d’avoir
+            utilis&eacute; l’application.
             <br>
         </p>
         <div class="box_img-flex3">
@@ -287,10 +287,10 @@
         </div>
 
         <p class="text-corp">
-            <b>Les profils likés</b>
+            <b>Les profils lik&eacute;s</b>
             <br>
-            Sur l’onglet «profils enregistrés» on peut retrouver les personnes avec lesquelles on a matché. En cliquant
-            sur un profil on peut retrouver en plusieurs détails la personne qui nous intéresse.
+            Sur l’onglet «profils enregistr&eacute;s» on peut retrouver les personnes avec lesquelles on a match&eacute;. En cliquant
+            sur un profil on peut retrouver en plusieurs d&eacute;tails la personne qui nous int&eacute;resse.
             <br>
         </p>
         <div class="box_img-flex2">
@@ -302,7 +302,7 @@
             <b>Le chat</b>
             <br>
             Sur l’onglet chat, en plus de retrouver toutes vos conversations, vous pouvez proposer ou vous faire
-            proposer une idée de sortie et choisir de l’accepter ou non.
+            proposer une id&eacute;e de sortie et choisir de l’accepter ou non.
             <br>
         </p>
         <div class="box_img-flex2">
@@ -313,7 +313,7 @@
         <p class="text-corp">
             <b>Le profil</b>
             <br>
-            Changer ses options, se déconnecter, supprimer son compte....
+            Changer ses options, se d&eacute;connecter, supprimer son compte....
             <br>
         </p>
         <div class="box_img-flex3">
