création des fichier l'acoste mobile et nav barre ordi : mon CV

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
             <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
             <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
+            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">mon CV</button></a>
             <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
             <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
         </nav>
