--- a/m/l'acoste.html
+++ b/m/l'acoste.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="data/css/style-L'ACOSTE.css">
-    <link rel="stylesheet" href="data/css/nav.css">
-    <link rel="stylesheet" href="data/css/footer.css">
+    <link rel="stylesheet" href="css/style-L'ACOSTE.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
     <script src="data/js/device-redirect-computer.js"></script>
@@ -24,7 +24,7 @@
             <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
             <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
             <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
-                    class="btn-cv">mon CV</button></a>
+                    class="btn-cv">CV</button></a>
             <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button
                     class="btn-behance">BE</button></a>
             <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button
