--- a/m/contact.html
+++ b/m/contact.html
@@ -2,7 +2,7 @@
 <html lang="frfr">
 
 <head>
-    <title>mContact | mthillayisnard.fr</title>
+    <title>Contact | mthillayisnard.fr</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
               <li><a href="index.html#projets">Projets</a></li>
               <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">Mon CV</button></a></li>
+              <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">mon CV</button></a></li>
               <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn"></button></a></li>
               <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
             </div>
