--- a/m/index.html
+++ b/m/index.html
@@ -2,7 +2,7 @@
 <html lang="frfr">
 
 <head>
-    <title>mAccueil | mthillayisnard.fr</title>
+    <title>Accueil | mthillayisnard.fr</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,7 +45,7 @@
                         <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button
-                                    class="nav_btn-cv">Mon CV</button></a></li>
+                                    class="nav_btn-cv">mon CV</button></a></li>
                         <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img
                                         src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin"
                                         class="nav_logo-lkdn"></button></a></li>
